--- a/index.html
+++ b/index.html
@@ -4,27 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acceuil</title>
+    <link rel="stylesheet" href="css.css">
+    
 </head>
 <body>
     <header class="header">
-        <a href="Projet Portfolio.html"> Portfolio</a>
+        <a href="index.html" class="portfolio"> Portfolio</a>
 
-    <nav class="navbar">  
-        <a href="#">Acceuil</a>
-        <a href="à propos.html">à propos</a>
-        <a href="compétances.html">Compétances</a>
-        <a href="contact.html">Contact</a>
+    <nav class="nav">  
+        <a href="#" class="active">Acceuil</a>
+        <a href="à propos.html" >à propos</a>
+        <a href="compétances.html" >Compétances</a>
+        <a href="contact.html" >Contact</a>
     </nav>
     </header>
+    <br>
+    <br>
+    <br>
     <section class="home">
         <div class="home-content">
             
-            <h1>Bonjour je vous présente je suis <strong>Houssem Ellouze</strong></h1>
-            <p>Je suis actuellement un éléve ingénieur en 1ére année du cycle d'ingénerie en Informatique<br>
+            <h3>Bonjour je vous présente je suis</h3>
+            <br>
+            <br>
+            <h1><span>Houssem Ellouze</span></h1>
+            <br>
+            <br>
+            <p>Je suis actuellement un éléve ingénieur en 1ére année du cycle d'ingénerie en Informatique 
                  à L'École supérieure privée d'ingénierie et de technologie (ESPRIT)<p>
         </div>
         <div class="home-img">
-            <img src="../Desktop/11111111111111111-removebg-preview.png" title="photo de Houssem Ellouze">
+            <img src="../11111111111111111-removebg-preview.png"title="photo de Houssem Ellouze">
         </div>
     </section>
     <br>
